# herdingcats

./: .clippy.toml  AI.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  maddie_changes_0p5.md  release-plz.yml
.github/workflows/: release-plz.yml  rust.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v0.5-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.5-REQUIREMENTS.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/phases/01-core-types/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md
.planning/phases/01-module-split-and-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/herdingcats_codegen/: Cargo.toml
docs/: ARCHITECTURAL_INVARIANTS.md  EXTENSION_GUIDELINES.md
docs/dsl/: README.md  bindings.md  grammar-scope.pest  ir.md  semantics.md  validation.md
examples/: backgammon.rs  tictactoe.rs
examples/dsl_consumer/: Cargo.toml  build.rs
examples/dsl_consumer/rules/: example.cats
examples/dsl_consumer/src/: lib.rs  main.rs
src/: action.rs  apply.rs  behavior.rs  engine.rs  hash.rs  lib.rs  mutation.rs  operation.rs  outcome.rs  reversibility.rs  rule.rs  spec.rs  transaction.rs
tests/: phase5_codegen.rs  phase6_validation.rs
(+137 files in other folders)
