[workspace]

[package]
name = "dsl_consumer"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
herdingcats = { path = "../.." }

[build-dependencies]
herdingcats_codegen = { path = "../../crates/herdingcats_codegen" }

[dev-dependencies]
proptest = "1.10"
